Prevent scrollbars when dice off screen

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 
 body {
+  overflow:hidden;
   margin:0;
   font-size:62.5%;
   background:#000;
@@ -26,7 +27,7 @@ h1 {
   display:inline-block;
   margin:.1em; padding:.6em;
   width:2.4em; height:2.4em;
-  font-size:2em;
+  font-size:4em;
   background:#fff;
   border-radius:20%;
 
